@@ -1,4 +1,4 @@
-usr/bin/assistant_adp
+usr/lib/*/qt4/bin/assistant_adp
 usr/share/qt4/translations/assistant_adp_de.qm
 usr/share/qt4/translations/assistant_adp_ja.qm
 usr/share/qt4/translations/assistant_adp_pl.qm
